guacamole/web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole-web
  namespace: guacamole
  labels:
    app.kubernetes.io/name: guacamole-web
    app.kubernetes.io/part-of: guacamole
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: guacamole-web
    app.kubernetes.io/part-of: guacamole
