guacamole/web/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole
  labels:
    app.kubernetes.io/name: guacamole-web
    app.kubernetes.io/part-of: guacamole
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: guacamole.app.corp.lcl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole-web
                port:
                  name: http
